dashboard/src/index.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --toastify-z-index: 9999;
}

.Toastify__hack-force-fast {
  animation-duration: 1ms !important;
}
.debug {
  @apply tw-border-8 tw-border-red-500;
}

.button-submit {
  @apply tw-inline-flex tw-w-full tw-cursor-pointer tw-justify-center tw-rounded-md tw-border tw-border-transparent tw-bg-main tw-px-4 tw-py-2 tw-text-base tw-font-medium tw-text-white tw-shadow-sm hover:tw-bg-main75 focus:tw-outline-none focus:tw-ring-2 focus:tw-ring-main75 focus:tw-ring-offset-2 disabled:tw-cursor-not-allowed disabled:tw-opacity-30 sm:tw-ml-3 sm:tw-w-auto sm:tw-text-sm;
}

.button-link {
  @apply tw-inline-flex tw-w-full tw-cursor-pointer tw-justify-center tw-rounded-md tw-border tw-border-transparent tw-px-4 tw-py-2 tw-font-semibold tw-text-main hover:tw-underline focus:tw-underline focus:tw-outline-none focus:tw-ring-2 focus:tw-ring-main25 focus:tw-ring-offset-2 disabled:tw-cursor-not-allowed disabled:tw-opacity-30 sm:tw-ml-3 sm:tw-w-auto;
}

.button-cancel,
.button-classic {
  @apply tw-inline-flex tw-w-full tw-justify-center tw-rounded-md tw-border tw-border-gray-300 tw-bg-white tw-px-4 tw-py-2 tw-text-base tw-font-medium tw-text-gray-700 tw-shadow-sm hover:tw-bg-gray-50 focus:tw-outline-none focus:tw-ring-2 focus:tw-ring-main focus:tw-ring-offset-2 disabled:tw-cursor-not-allowed disabled:tw-opacity-30 sm:tw-ml-3 sm:tw-mt-0 sm:tw-w-auto sm:tw-text-sm;
}

.button-destructive {
  @apply tw-inline-flex tw-w-full tw-justify-center tw-rounded-md tw-border tw-border-transparent tw-bg-red-100 tw-px-4 tw-py-2 tw-text-base tw-font-medium tw-text-red-700 tw-shadow-sm hover:tw-bg-red-200 focus:tw-outline-none focus:tw-ring-2 focus:tw-ring-red-500 focus:tw-ring-offset-2 disabled:tw-cursor-not-allowed disabled:tw-opacity-30 sm:tw-ml-3 sm:tw-w-auto sm:tw-text-sm;
}

.disable-everything * {
  pointer-events: none !important;
  opacity: 0.9 !important;
  cursor: wait !important;
}

.my-tooltip {
  position: relative;
}

.my-tooltip::after {
  content: attr(data-tooltip) / "";
  position: absolute;
  font-weight: 400;
  bottom: 100%;
  left: 0;
  width: max-content;
  // transform: translateX(-500px);
  background-color: #333;
  color: white;
  padding: 5px 10px;
  border-radius: 4px;
  white-space: pre-wrap;
  opacity: 0;
  pointer-events: none;
  transition: opacity 0.1s ease-in-out;
}

.my-tooltip:hover::after {
  opacity: 1;
}

/* inspired from https://tailwindui.com/components/application-ui/forms/input-groups#component-2607d970262ada86428f063c72b1e7bd */
div.tailwindui,
input.tailwindui,
textarea.tailwindui {
  @apply tw-relative tw-mt-1 tw-block tw-w-full tw-appearance-none tw-rounded tw-border tw-border-gray-300 tw-px-2 tw-py-2 tw-text-base tw-shadow-sm focus:tw-border-main focus:tw-ring-main sm:tw-text-sm;
}
label.tailwindui {
  @apply tw-mb-2 tw-block tw-text-gray-700;
}

.input-focus-helper {
  outline: 1px dashed #eee !important;
  min-width: 50px !important;
}
.input-focus-helper:focus,
.input-focus-helper:active {
  outline: auto !important;
}

/* table selego */

table.table-selego {
  width: 100%;
  padding: 16px;
  background: #fff;
  -fs-table-paginate: paginate;

  thead tr {
    height: 2.5rem;
  }

  tbody {
    box-shadow: 0 4px 8px rgba(29, 32, 33, 0.05);
  }

  tr {
    height: 3.5rem;
  }

  tbody > tr:nth-child(odd) {
    background-color: #f7f9fa;
  }

  tbody > tr:hover {
    background-color: #b9b9b9;
  }

  thead td,
  thead th {
    color: #008e7f;
    text-align: left;
    padding: 0.5rem 0.5rem;
  }

  thead td,
  thead td *,
  thead th,
  thead th * {
    font-weight: 600;
    font-size: 12px;
    text-transform: uppercase;
  }

  thead .title {
    caption-side: top;
    font-weight: bold;
    font-size: 24px;
    line-height: 32px;
    padding: 20px 0 10px 0;
    width: 100%;
    color: #1d2021;
    text-transform: none;
  }

  tbody td {
    padding: 0.25rem 0.5rem;
    font-size: 14px;
  }
  td {
    &.small {
      min-width: 50px;
    }
    /* if not this class, there is a bug ! try it */
    &.not-small {
      min-width: 100px;
    }
    &:not(:last-of-type) {
      border-right: 1px solid #dddddd55;
    }
  }
}

@media screen {
  .table-selego.medical tbody > tr:nth-child(odd) {
    background-color: #e6f4fe;
  }
}

/* react-datepicker */

.stats-datepicker .react-datepicker {
  @apply tw-rounded-none tw-border-0 tw-border-l tw-border-gray-300;
}
.stats-datepicker .react-datepicker__day--outside-month {
  @apply tw-opacity-30;
}
.stats-datepicker .react-datepicker__day--in-range,
.stats-datepicker .react-datepicker__day--selected,
.stats-datepicker .react-datepicker__day--keyboard-selected,
.stats-datepicker .react-datepicker__day--in-selecting-range {
  @apply tw-bg-main;
}
.stats-datepicker .react-datepicker__navigation-icon {
  font-size: 10px;
}

/* reset */

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  font-family: serif;
  color: #1d2021;
}

ul {
  padding: initial;
  margin: initial;
  padding-inline-start: 40px;
}

li {
  padding: initial;
  margin: initial;
}

#root {
  display: flex;
  flex-direction: column;
  height: 100vh;
  overflow: hidden;
}

.main {
  flex-grow: 1;
  flex-basis: 100%;
  display: flex;
  overflow: hidden;
  width: 100%;
}

.main-container {
  flex: 1;
  flex-basis: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  overflow: hidden;
  align-items: center;
  justify-content: center;
}

// input:focus,
// textarea:focus,
// select:focus {
//   outline: none;
// }
table {
  background-color: white;
  padding: 24px !important;
}
table tr {
  cursor: pointer;
}
a {
  text-decoration: none;
}

hr {
  margin-top: 1vw;
  margin-bottom: 1vw;
  flex-shrink: 0;
}

.image-input {
  height: 100px;
  min-width: 150px;
  background: #f3f3f3 url("./assets/image.svg") center no-repeat;
  background-size: 50%;
  border: 2px solid #eee;
  margin-top: 10px;
  cursor: pointer;
}

.time-range {
  background-color: white;
  border-radius: 5px;
  border-color: lightgray;
  border-style: solid;
  border-width: 1px;
  padding: 4.5px 4px;
}

.time-range {
  border: none !important;
  width: 100%;
}

.time-range .react-daterange-picker__wrapper {
  border: none !important;
}

.time-range .react-daterange-picker__clear-button {
  border-radius: 100px;
  border: none;
  padding: 2px;
  width: 14px;
  height: 14px;
  background-color: #cbd3d6;
}

.time-range .react-daterange-picker__clear-button__icon {
  width: 10px;
  height: 10px;
  color: white;
  stroke: white;
}

@media print {
  .noprint {
    display: none !important;
  }
  .main,
  .main-container {
    height: auto;
    overflow: visible !important;
  }

  #root {
    overflow-y: visible !important;
    overflow: visible !important;
    height: auto;
  }

  body {
    overflow: visible !important;
  }
  /* Ensure SVG charts render properly */
  svg {
    overflow: visible !important;
    max-width: 100%;
    height: auto;
  }

  .report-container {
    padding: 0 !important;
    color-adjust: exact;
    -webkit-print-color-adjust: exact;
    print-color-adjust: exact;
  }

  .report-container > .printonly > div {
    border-radius: 16px;
    color-adjust: exact;
    -webkit-print-color-adjust: exact;
    print-color-adjust: exact;
    border: 1px solid #ddd;
  }

  .print-title {
    position: fixed;
    top: 0;
    font-size: 14px;
    font-weight: 400;
    font-style: italic;
    margin-bottom: 30px;
    opacity: 0.5;
  }

  hr {
    page-break-before: auto;
    display: none;
  }
}
@media screen {
  .printonly {
    display: none !important;
  }
}

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active {
  -webkit-box-shadow: 0 0 0 30px rgba(222, 243, 237, 1) inset !important;
}

$theme-colors: (
  "primary": #226854,
);

.visually-hidden {
  visibility: hidden;
}

.document-row {
  position: relative;
  overflow: visible !important;
  &::before {
    content: "";
    @apply tw-absolute -tw-left-20 tw-right-0 tw-top-0 tw-h-full tw-bg-main;
    border: 2px solid black;
  }
}

@import "bootstrap/scss/bootstrap.scss";

